# pms

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: accounts.rs  chat.rs  mod.rs  projects.rs
src-tauri/src/db/: mod.rs  schema.sql
src/components/: AppShell.tsx  Confirm.tsx  Modal.tsx  NotificationsMenu.tsx  RequirePermission.tsx  Sidebar.tsx  Topbar.tsx  ui.tsx
src/features/accounts/: Auth.tsx  Dashboard.tsx  EmployeeProfile.tsx  Notes.tsx  RolesAdmin.tsx  Settings.tsx  Users.tsx
src/features/chat/: Chat.tsx
src/features/projects/: CalendarView.tsx  KanbanBoard.tsx  MyTasks.tsx  ProjectTree.tsx  ProjectsList.tsx  Reports.tsx  TreeView.tsx
src/icons/: index.tsx
src/lib/: api.ts  auth.tsx  mock.ts  permissions.ts  theme.tsx  timers.tsx  types.ts  useData.ts
src/styles/: root.css
