[package]
name = "proteus-pms"
version = "0.1.0"
description = "Proteus — İş & Proje Yönetim Platformu"
authors = ["Proteus"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "proteus_pms_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
